k8s/green-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: video-ns
  name: green-deployment-video-search
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: green-video-search-app
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: green-video-search-app
    spec:
      containers:
      - name: green-video-search-app
        image: saikumar21/video-search-prediction-opt:green
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: video-ns
  name: green-service-video-search
  labels: 
    app.kubernetes.io/name: green-video-search-app
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: green-video-search-app
