k8s/blue-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: video-ns
  name: ingress-video-search
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: blue-service-video-search
              port:
                number: 80
