k8s/deploy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: video-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: video-ns
  name: deployment-video-search
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: video-search-app
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: video-search-app
    spec:
      containers:
      - name: video-search-app
        image: saikumar21/video-search-prediction-opt:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: video-ns
  name: service-video-search
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: video-search-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: video-ns
  name: ingress-video-search
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: service-video-search
              port:
                number: 80
